<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbSemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/semipresencial"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="132dp" />

        <RadioButton
            android:id="@+id/rbPresencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presencial"
            android:textSize="16sp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="114dp" />
    </RadioGroup>


    <TextView
        android:id="@+id/idNombre"
        style="@style/sticky"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:text="@string/nombre"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIntroName"
        style="@style/IntroDatos"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/introduzca_el_nombre_del_alumno"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toEndOf="@+id/idNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IdFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/fecha_nac"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="67dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="132dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/IdFechaNac"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMonth"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="132dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/txtDay"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="67dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtMonth"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <RadioButton
            android:id="@+id/rbDam"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="88dp"
            android:checked="true"
            android:text="@string/dam"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbAsir"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="88dp"
            android:text="@string/asir"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbDaw"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="70dp"
            android:text="@string/daw"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btDatos"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="32dp"
        android:text="@string/obtener_datos"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResul"
        android:layout_width="386dp"
        android:layout_height="260dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:editable="false"
        android:lines="5"
        android:singleLine="false"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDatos" />

    <TextView
        android:id="@+id/txtVerNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResul" />

</androidx.constraintlayout.widget.ConstraintLayout>
